--- a/funnel3.html
+++ b/funnel3.html
@@ -64,7 +64,7 @@
     <div id="form">      
 	<br/>
     <form action="/" method="get">
-    	<hl><font face="Georgia"> You Made It! </font></hl>
+    	<hl><font face="Georgia"> Thanks! You Made It! </font></hl>
     	<br/>
         <input type="submit" value="Back to Messages">
     </form>
